--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,26 +1,28 @@
-pipeline {
-    agent any
+pipeline { 
+  
+   agent any
 
-    stages {
-        stage('Build') {
-            steps {
-                echo 'Building...'
-                // Your build steps here
-            }
+   stages {
+   
+     stage('Install Dependencies') { 
+        steps { 
+           sh 'npm install' 
         }
+     }
+     
+     stage('Test') { 
+        steps { 
+           sh 'echo "testing application..."'
+        }
+      }
 
-        stage('Test') {
-            steps {
-                echo 'Testing...'
-                // Your test steps here
-            }
-        }
+         stage("Deploy application") { 
+         steps { 
+           sh 'echo "deploying application..."'
+         }
 
-        stage('Deploy') {
-            steps {
-                echo 'Deploying...'
-                // Your deployment steps here
-            }
-        }
-    }
-)
+     }
+  
+   	}
+
+   }
